<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_favorite"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_favorite"/>
    
    <item
        android:id="@+id/menu_add_to_playlist"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_add_to_playlist"/>
    
    <item
        android:id="@+id/menu_download_art"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/menu_download_art"/>
    
     <item
        android:id="@+id/menu_search"
        android:icon="?attr/action_search"
        android:orderInCategory="500"
        android:showAsAction="always"
        android:title="@string/menu_search"/>

</menu>