<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit_playlist"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_edit_playlist"/>
    
    <item
        android:id="@+id/menu_play_all"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/play_all"/>
    
    <item
        android:id="@+id/menu_delete_playlist"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/menu_remove_from_list"/>
    
    <item
        android:id="@+id/menu_rename_playlist"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_rename_playlist"/>
	

</menu>