<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	>
    	
    <TextView
        android:id="@+id/player_song_title"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_title"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/player_song_artist"
        android:layout_below="@+id/player_song_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/text_artist"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="14sp" />
    
    <ImageView
        android:id="@+id/player_art"     
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/player_song_artist"
        android:layout_margin="8dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:layout_above="@+id/player_times_container"
        android:src="@drawable/dummy_art" />
    
	<LinearLayout 
	    android:id="@+id/player_times_container"
    	android:orientation="horizontal"
    	android:layout_above="@+id/player_controls_container"
    	android:layout_margin="4dp"
		android:gravity="center_horizontal"
        android:layout_width="match_parent"        
        android:layout_height="wrap_content">
        
	    <TextView
	        android:layout_margin="4dp"
	        android:textSize="10sp"
	        android:id="@+id/cur_time"
	        android:layout_height="wrap_content" 
	        android:layout_width="wrap_content"
	        android:layout_gravity="center_vertical"
	        />
    
    	<SeekBar
        	android:id="@+id/slider"
        	android:layout_margin="4dp"
        	style="?android:attr/progressBarStyleHorizontal"
        	android:layout_width="240dp"
        	android:layout_gravity="center_vertical"
        	android:layout_height="wrap_content"        	
        	/>
    	
    	<TextView
	        android:layout_margin="4dp"
	        android:textSize="10sp"
	        android:id="@+id/total_time"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical" 
	        android:layout_width="wrap_content"
	        />
    
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/player_controls_container"
        android:orientation="horizontal"        
        android:layout_alignParentBottom="true"
		android:gravity="center_horizontal"
        android:layout_width="match_parent"        
        android:layout_height="wrap_content"
        >
        
	<ImageButton
	    android:id="@+id/button_shuffle"
	    style="?android:attr/borderlessButtonStyle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/button_shuffle"
	    android:src="@drawable/ic_shuffle_holo_dark" />
	
    <ImageButton
        android:id="@+id/button_previous"
        style="?android:attr/borderlessButtonStyle"
        android:contentDescription="@string/button_previous"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:src="@drawable/ic_prev_holo_dark" />
        
    <ImageButton	
        android:id="@+id/button_play"
        style="?android:attr/borderlessButtonStyle"
        android:contentDescription="@string/button_play"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:src="@drawable/ic_play_holo_dark" />
    
    <ImageButton
        android:id="@+id/button_next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:contentDescription="@string/button_next"
        android:src="@drawable/ic_next_holo_dark" />

    <ImageButton
        android:id="@+id/button_repeat"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:contentDescription="@string/button_repeat"
        android:src="@drawable/ic_repeat_holo_dark" />
    
	</LinearLayout>
</RelativeLayout>