<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/playlist_chooser_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:text="@string/text_playlist_spinner_title"
        android:textSize="@dimen/text_size_medium" />

    <Spinner
        android:id="@+id/playlist_chooser_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/playlist_chooser_spinner_title" />

    <EditText
        android:id="@+id/playlist_chooser_new_pl_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/playlist_chooser_spinner"
        android:ems="10"
        android:hint="New Playlist Name"
        android:visibility="gone" />

    <Button
        android:id="@+id/playlist_chooser_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/playlist_chooser_new_pl_name"
        android:text="@string/button_new_playlist" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playlist_chooser_new"
        android:orientation="vertical"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="0dip" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?android:attr/dividerVertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/playlist_chooser_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/dividerHorizontal" />

            <Button
                android:id="@+id/playlist_chooser_save"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_save" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>